IDE-1933 Add the server launch setion and liferay account setion on portal server editor.